--- a/CSS/style.css
+++ b/CSS/style.css
@@ -995,6 +995,7 @@ footer{
         padding-bottom: 10%;
     }
     .titulosobre {
+        font-size: 25px;
         width: 25%;
     }
     .textosobre{
